--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,8 @@
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
+    <script 
+      src="https://cdn.plot.ly/plotly-2.11.1.min.js"></script>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/1.4.0/css/perfect-scrollbar.min.css"
       rel="stylesheet"
