--- a/templates/base/meetings/detail.html
+++ b/templates/base/meetings/detail.html
@@ -20,7 +20,7 @@
                             {{meeting_form|crispy}}
                         </div>
                         <div class="text-center mr-b-30">
-                            <button class="btn btn-rounded btn-success ripple" type="submit">Add Minutes</button>
+                            <button class="btn btn-rounded btn-success ripple" type="submit">Update</button>
                         </div>
                     </form>
                 </div>
