--- a/templates/base/projects/list.html
+++ b/templates/base/projects/list.html
@@ -162,7 +162,7 @@
         {% for item in projects %}
         <div class="alert alert-light ">
             <h6 class="box-title mr-b-0">{{item.title}}</h6>
-            <p class="text-muted">Agenda: {{item.entity}}</p>
+            <p class="text-muted">Entity: {{item.entity}}</p>
             <p class="text-muted">Duration: {{item.start_date|date}} - {{item.end_date|date}}</p>
             <p class="text-muted">Description: {{item.description}}</p>
             <a href=""
