--- a/templates/base/financials/list.html
+++ b/templates/base/financials/list.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% load static %} {% load crispy_forms_tags %} {% block title %}Financials Expenses{% endblock %} {% block scripts %}
+{% extends 'base.html' %} {% load static %} {% load crispy_forms_tags %} {% block title %}Financials Income{% endblock %} {% block scripts %}
 <style type="text/css">
   #id_invitees > ul {
     max-height: 150px;
@@ -13,7 +13,7 @@
   <!--Form Modal -->
   <div
     class="modal modal-blue fade bs-modal-lg-blue"
-    id="expensesModal"
+    id="meetingModal"
     tabindex="-1"
     aria-labelledby="exampleModalLabel"
     aria-hidden="true"
@@ -21,7 +21,7 @@
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Create Entry</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Create Record</h5>
           <button
             type="button"
             class="close"
@@ -32,7 +32,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <form action="{% url 'expense_form' %}" method="POST">
+          <form action="{% url 'financial_form' %}" method="POST">
             {% csrf_token %}
             <div class="form-group">
               {{form|crispy}}
@@ -52,14 +52,14 @@
     <div class="page-title-left">
       <h6 class="page-title-heading mr-0 mr-r-5">Financials</h6>
       <p class="page-title-description mr-0 d-none d-md-inline-block">
-        Financial Expenditures
+        Financial Income
       </p>
     </div>
     <!-- /.page-title-left -->
     <div class="page-title-right d-none d-sm-inline-flex">
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="/">Dashboard</a></li>
-        <li class="breadcrumb-item active">Expenses</li>
+        <li class="breadcrumb-item active">Income</li>
       </ol>
     </div>
     <!-- /.page-title-right -->
@@ -74,7 +74,7 @@
           <a
             href="#"
             data-bs-toggle="modal"
-            data-bs-target="#expensesModal"
+            data-bs-target="#meetingModal"
             class="btn btn-dark btn-sm"
             >Create entry</a
           >
@@ -90,19 +90,35 @@
     </div>
   </div>
   <!-- Widget for graph stats -->
-  <div class="widget-list row"></div>
+  <div class="widget-list row">
+    <div class="col-lg-4 widget-holder">
+      <ul class="list-group">
+        {% for cat in categories %}
+        <li
+          class="list-group-item list-group-item-action d-flex justify-content-end"
+        >
+          <a
+            href="{% url 'expense_list_by_category' cat.slug %}"
+            class="mr-auto mr-0-rtl ml-auto-rtl"
+            >{{cat.name}}</a
+          >
+        </li>
+        {% if not forloop.last %} {% endif %}{% endfor %}
+      </ul>
+    </div>
+  </div>
 
   <!-- Widget for list -->
   <div class="row">
     <div class="col-lg-12 widget-holder widget-full-height widget-flex">
-      {% if expenses %}
+      {% if fin %}
       <div class="widget-bg">
         <div class="widget-body clearfix">
-          {% with expenses.count as total_expenses %}
-          <h5 class="box-title mr-b-0">
-            {{ total_expenses }} Record{{ total_expenses|pluralize }}
-          </h5>
-          {% endwith %}
+            {% if category.slug %}
+              {% with category.count as total_finances %}
+              <h5 class='box-title mr-b-0'>{{ total_finances }} {{category.name}}{{ total_finances|pluralize }}</h5>
+              {% endwith %}
+            {% endif %}
         </div>
         <div class="alert alert-light app-table">
             <table class="table table-responsize mail-list contact-list">
@@ -110,12 +126,14 @@
                     <tr>
                         <td class="contact-list-name">Entity</td>
                         <td class="contact-list-name">Project</td>
-                        <td class="contact-list-name">Captured By</td>
+                        <td class="contact-list-name">Profile</td>
+                        <td class="contact-list-name">Category</td>
                         <td class="contact-list-name">Amount</td>
-                        <td class="contact-list-name">Captured on</td>
-                        <td class="contact-list-name"></td>
+                        <td class="contact-list-name">Contact</td>
+                        <td class="contact-list-name">Date</td>
+                        <td class="contact-list-name">Reason</td>
                     </tr>
-                    {% for item in expenses %}
+                    {% for item in fin %}
                     <tr>
                         <td class="contact-list-name">
                             <span
@@ -132,7 +150,13 @@
                         <td class="contact-list-name">
                             <span
                             class="contact-list-phone d-block ">
-                            {{item.owner}}
+                            {{item.profile}}
+                            </span>
+                        </td>
+                        <td class="contact-list-name">
+                            <span
+                            class="contact-list-phone d-block ">
+                            {{item.category}}
                             </span>
                         </td>
                         <td class="contact-list-name">
@@ -144,8 +168,17 @@
                         <td class="contact-list-name">
                             <span
                             class="contact-list-phone d-block ">
-                            {{item.captured_date|date}}
+                            {{item.contact.id}}
                             </span>
+                        </td>
+                        <td class="contact-list-name">
+                            <span
+                            class="contact-list-phone d-block ">
+                            {{item.upload_date|date}}
+                            </span>
+                        </td>
+                        <td class="contact-list-name">
+                          {% if item.reason %}{{item.reason}}{% else %}-{% endif %}
                         </td>
                     </tr>
                     {% endfor %}
