Set models by groups

--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -5,8 +5,8 @@
 >
   <div class="login-center">
     <div class="navbar-header text-center mt-2 mb-4">
-      <a href="#">
-        <img src="{% static 'img/logo-light.png' %}" alt="Boardium Logo" />
+      <a href="/">
+        <img src="{% static 'img/Logo_web.png' %}" alt="logo" />
       </a>
     </div>
     <!-- /.navbar-header -->
