--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -4,8 +4,8 @@
 {% block content %}
 <div class="col-10 ml-sm-auto col-sm-8 col-md-4 ml-md-auto login-center mx-auto">
     <div class="navbar-header text-center mt-2 mb-4">
-        <a href="#">
-            <img src="{% static 'img/logo-light.png' %}" alt="Boardium Logo">
+        <a href="/">
+            <img src="{% static 'img/Logo_web.png' %}" alt="Logo">
         </a>
     </div>
     <!-- /.navbar-header -->
