--- a/templates/authentication/reset_password.html
+++ b/templates/authentication/reset_password.html
@@ -5,8 +5,8 @@
 <div class="row container-min-full-height align-items-center">
     <div class="col-10 ml-sm-auto col-sm-6 col-md-4 ml-md-auto login-center login-center-mini mx-auto">
         <div class="navbar-header text-center mt-2 mb-4">
-            <a href="#">
-                <img alt="Boardium Logo" src="{% static 'img/logo-light.png' %}">
+            <a href="/">
+                <img alt="Logo" src="{% static 'img/Logo_web.png' %}">
             </a>
         </div>
         <!-- /.navbar-header -->
