--- a/templates/base.html
+++ b/templates/base.html
@@ -94,7 +94,7 @@
               <img
                 class="logo-expand"
                 alt="Directors logo"
-                src="{% static 'img/logo.png' %}"
+                src="{% static 'img/Logo_web.png' %}"
               />
               <img
                 class="logo-collapse"
