--- a/templates/base/financials/index.html
+++ b/templates/base/financials/index.html
@@ -89,18 +89,18 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-sm-6 col-12 mr-b-20 tab">
-        <button
+        <!-- <button
           class="tablinks btn btn-info btn-sm"
           onclick="openFinance(event, 'byFinance')"
           id="defaultOpen"
           >Income vs Expense</button
         >
         &nbsp;
-        <button
+         <button
           class="tablinks btn btn-info btn-sm"
           onclick="openFinance(event, 'byEntity')"
           >Entity</button
-        >
+        > -->
       </div>
       <div class="col-lg-4">
         <div class="form-group tab"></div>
@@ -140,7 +140,7 @@
       {% endif %}
     
 
-      <!-- By Entity -->
+      <!-- By Entity
       {% if entity %}
       <div class="widget-bg tabcontent" id="byEntity">
         <div class="widget-body clearfix">
@@ -160,7 +160,7 @@
         >
       </div>
       {% endif %}
-    </div>
+    </div> -->
   </div>
 </div>
 {% endblock %} {% block javascript %}
