--- a/templates/base/dashboard.html
+++ b/templates/base/dashboard.html
@@ -136,31 +136,29 @@
     <h4>Activity List</h4>
   </div>
   <div class="row">
-    {% for item in fin %}
     <div class="widget-holder widget-full-height widget-flex col-lg-6">
       <div class="widget-bg">
         <div class="widget-heading">
-          <h3 class="widget-title">{{item.entity.name}}</h3>
+          <h2 class="widget-title">Financials</h2>
         </div>
-        {% if item %}
+        {% if fin %} 
         <div class="custom-scroll-content scrollbar-enabled">
+          {% for item in fin %}
           <div class="alert alert-light">
-            {% if item.project %}
-            <h6 class="box-title mr-b-0">Project: {{item.project}}</h6>
-            <br />
-            {% else %}
-            <p class="text-muted"></p>
-            {% endif %}
-            <p class="text-muted">Profile: {{item.profile}}</p>
-            <p class="text-muted">Amount: {{item.amount}}</p>
-            <p class="text-muted">Contact: {{item.contact}}</p>
-            <p class="text-muted">Date: {{item.upload_date|date}}</p>
-            
+            <h6 class="box-title mr-b-0">
+              {% if item.project %}Project: {{item.project}}{% else %}
+              {% endif%}
+            </h6>
+            <h6 class="box-title mr-b-0">Type:</h6> <p>{{item.profile}} </p>           
+            <h6 class="box-title mr-b-0">Amount:</h6> <p>{{item.amount}}</p>
+            <h6 class="box-title mr-b-0">Contact:</h6> <p>{{item.contact}}</p>
+            <h6 class="box-title mr-b-0">Date:</h6> <p>{{item.upload_date|date}}</p>
+
             <hr />
           </div>
+          {% endfor %}
         </div>
-
-        {% else %}
+         {% else %}
         <div class="alert alert-light">
           <a
             href=""
@@ -179,88 +177,10 @@
         </div>
       </div>
     </div>
-    {% endfor %}
-  </div>
-  <hr class="mt-4 mb-4" />
-  <div class="row">
-    <div class="widget-holder widget-full-height widget-flex col-md-6">
-      <div class="widget-bg">
-        <div class="widget-heading">
-          <h5 class="widget-title">Upcoming Meetings</h5>
-        </div>
-        <!-- /.widget-actions -->
-        <div class="widget-body">
-          <div class="widget-todo">
-            <div class="custom-scroll-content scrollbar-enabled">
-              {% if assigned %} {% for item in assigned %}
-              <div class="single media">
-                <i class="single-icon material-icons color-primary"
-                  >radio_button_unchecked</i
-                >
-                <div class="media-body">
-                  <div class="text-muted heading-font-family fw-500">
-                    Due: {{item.deadline|date}} {{item.deadline|time}}
-                  </div>
-                  <h6 class="single-title">{{item.title}}</h6>
-                  <p class="fw-400 fs-13 mb-0 text-muted">
-                    <i class="align-bottom material-icons md-18"> apps</i
-                    >{{item.description}}
-                  </p>
-                  {% if request.user.is_staff %}
-                  <p class="fw-400 fs-13 mb-0 text-muted">
-                    Assigned to: {{item.user_to.first_name}}
-                  </p>
-                  {% endif %}
-                </div>
-                <div class="dropdown align-self-center">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-                    ><i class="material-icons">more_vert</i></a
-                  >
-                  <div class="dropdown-menu dropdown-menu-right">
-                    <form
-                      action="{% url 'assigned_task_complete' item.id %}"
-                      method="POST"
-                      class="form-group"
-                    >
-                      {% csrf_token %}
-                      <button type="submit" class="dropdown-item">Done</button>
-                    </form>
-                    <div class="dropdown-divider"></div>
-                    {% if request.user.is_staff %}
-                    <form
-                      action="{% url 'assigned_task_delete' item.id %}"
-                      method="POST"
-                      class="form-group"
-                    >
-                      {% csrf_token %}
-                      <button type="submit" class="dropdown-item">
-                        Delete
-                      </button>
-                    </form>
-                    {% endif %}
-                  </div>
-                  <!-- /.dropdown-menu -->
-                </div>
-              </div>
-              {% endfor %} {% else %}
-              <div class="alert alert-light">
-                <a
-                  href=""
-                  class="text-center"
-                  style="text-decoration: none; color: #dc3545"
-                  >You don't have any meetings.
-                </a>
-              </div>
-              {% endif%}
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
     <div class="widget-holder widget-full-height widget-flex col-lg-6">
       <div class="widget-bg">
         <div class="widget-heading">
-          <h5 class="widget-title">Projects</h5>
+          <h2 class="widget-title">Projects</h2>
         </div>
         <!-- /.widget-heading -->
         <div class="widget-body">
@@ -276,8 +196,12 @@
                     {{item.title}} Project
                   </div>
                   <h6 class="single-title">{{item.entity}}</h6>
-                  <h6 class="single-title">Duration: 
-                  <p class="fw-400 fs-13 mb-0 text-muted">{{item.start_date|date}} - {{item.end_date|date}}</p></h6>
+                  <h6 class="single-title">
+                    Duration:
+                    <p class="fw-400 fs-13 mb-0 text-muted">
+                      {{item.start_date|date}} - {{item.end_date|date}}
+                    </p>
+                  </h6>
                   <p class="fw-400 fs-13 mb-0 text-muted">
                     <i class="align-bottom material-icons md-18"> apps</i
                     >{{item.description}}
@@ -289,25 +213,11 @@
                     ><i class="material-icons">more_vert</i></a
                   >
                   <div class="dropdown-menu dropdown-menu-right">
-                    <form
-                      action=""
-                      method="POST"
-                      class="form-group"
-                    >
+                    <form action="" method="POST" class="form-group">
                       {% csrf_token %}
                       <button type="submit" class="dropdown-item">Done</button>
                     </form>
                     <div class="dropdown-divider"></div>
-                    <form
-                      action=""
-                      method="POST"
-                      class="form-group"
-                    >
-                      {% csrf_token %}
-                      <button type="submit" class="dropdown-item">
-                        Delete
-                      </button>
-                    </form>
                   </div>
                   <!-- /.dropdown-menu -->
                 </div>
@@ -340,6 +250,43 @@
   </div>
   <hr class="mt-4 mb-4" />
   <div class="row">
+    <div class="widget-holder widget-full-height widget-flex col-lg-6">
+      <div class="widget-bg">
+        <div class="widget-heading">
+          <h2 class="widget-title">Upcoming Meetings</h2>
+        </div>
+        {% if meeting %} 
+        <div class="custom-scroll-content scrollbar-enabled">
+          {% for item in meeting %}
+          <div class="alert alert-light">
+            <h6 class="box-title mr-b-0">Agenda:</h6> <p>{{item.agenda}}</p>
+            <h6 class="box-title mr-b-0">Estimated Time:</h6> <p>{{item.estimated_period}} </p>           
+            <h6 class="box-title mr-b-0">Duration:</h6> <p>{{item.start_time|time}}-{{item.end_time|time}}</p>
+            <h6 class="box-title mr-b-0">Date:</h6> <p>{{item.start_time|date}}</p>
+
+            <hr />
+          </div>
+          {% endfor %}
+        </div>
+         {% else %}
+        <div class="alert alert-light">
+          <a
+            href=""
+            class="text-center"
+            style="text-decoration: none; color: #dc3545"
+            >No data avaliable</a
+          >
+        </div>
+        {% endif %}
+        <div class="widget-todo">
+          <a
+            href="{% url 'financial_list' %}"
+            class="add-btn btn btn-circle btn-md fs-20 btn-primary"
+            ><i class="material-icons">exit_to_app</i></a
+          >
+        </div>
+      </div>
+    </div>
     <div class="col-lg-6 widget-holder">
       <div class="widget-bg">
         <div class="widget-body clearfix">
@@ -350,27 +297,13 @@
           {% for file in object_list %}
           <div class="alert alert-light">
             <h6 class="box-title mr-b-0">{{file.title}}</h6>
-            <p class="text-muted">{{file.category}}</p>
-            <a
-              href=""
-              class="btn btn-sm px-3 btn-rounded btn-success text-uppercase fw-600 fs-11"
-              >Read More</a
-            >
-            <hr />
-          </div>
-          {% endfor %}
-        </div>
-        {% elif docu_object %}
-        <div class="custom-scroll-content scrollbar-enabled">
-          {% for file in docu_object %}
-          <div class="alert alert-light">
-            <h6 class="box-title mr-b-0">{{file.title}}</h6>
-            <p class="text-muted">{{file.category}}</p>
-            <a
-              href=""
-              class="btn btn-sm px-3 btn-rounded btn-success text-uppercase fw-600 fs-11"
-              >Read More</a
-            >
+            <p class="card-muted">{{file.desc}}</p>
+            <p><strong>Attachments</strong></p>
+            {% for f in file.files_field.all %}
+            <a href="{{f.file_field.url}}"
+                class="btn btn-sm px-3 btn-rounded btn-info text-uppercase fw-600 fs-11"
+                target="_blank">Open document</a>
+            {% endfor %}
             <hr />
           </div>
           {% endfor %}
@@ -386,55 +319,48 @@
         </div>
         {% endif %}
         <div class="widget-todo">
-          <a href="" class="add-btn btn btn-circle btn-md fs-20 btn-primary"
+          <a href="{% url 'library' %}" class="add-btn btn btn-circle btn-md fs-20 btn-primary"
             ><i class="material-icons">open_in_new</i></a
           >
         </div>
       </div>
     </div>
-    <div class="col-lg-6 widget-holder">
+  </div>
+  <hr class="mt-4 mb-4" />
+  <div class="row">
+    <div class="widget-holder widget-full-height widget-flex col-lg-6">
       <div class="widget-bg">
-        <div class="widget-body clearfix">
-          <h5 class="box-title mr-b-0">Events</h5>
+        <div class="widget-heading">
+          <h2 class="widget-title">Newsletters</h2>
         </div>
-        {% if polls %}
+        {% if events %} 
         <div class="custom-scroll-content scrollbar-enabled">
-          {% for item in polls %}
+          {% for item in events %}
           <div class="alert alert-light">
-            <h6 class="box-title mr-b-0">{{item.question}}</h6>
-            <br />
-            <div class="widget-todo">
-              <a
-                href=""
-                class="btn btn-sm px-3 btn-rounded btn-success text-uppercase fw-600 fs-11"
-                >Vote</a
-              >
-            </div>
+            <h6 class="box-title mr-b-0">{{item.subject}}</h6>
+            <p class="text-muted">{{item.contents|safe}}</p>
+            <p class="text-muted">Created: {{item.created_at|date}}</p>
+            <a href="{% url 'send_notification' item.pk %}"
+                class="btn btn-sm px-3 btn-rounded btn-success text-uppercase fw-600 fs-11">Send Newsletter</a>
             <hr />
           </div>
           {% endfor %}
         </div>
-        {% elif poll %}
-        <div class="custom-scroll-content scrollbar-enabled">
-          {% for item in poll %}
-          <div class="alert alert-light">
-            <h6 class="box-title mr-b-0">{{item.question}}</h6>
-            <br />
-            <div class="widget-todo">
-              <a
-                href=""
-                class="btn btn-sm px-3 btn-rounded btn-success text-uppercase fw-600 fs-11"
-                >Vote</a
-              >
-            </div>
-            <hr />
-          </div>
-          {% endfor %}
+         {% else %}
+        <div class="alert alert-light">
+          <a
+            href=""
+            class="text-center"
+            style="text-decoration: none; color: #dc3545"
+            >No data avaliable</a
+          >
         </div>
         {% endif %}
         <div class="widget-todo">
-          <a href="" class="add-btn btn btn-circle btn-md fs-20 btn-primary"
-            ><i class="material-icons">open_in_new</i></a
+          <a
+            href="{% url 'events' %}"
+            class="add-btn btn btn-circle btn-md fs-20 btn-primary"
+            ><i class="material-icons">exit_to_app</i></a
           >
         </div>
       </div>
