--- a/templates/base/financials/list.html
+++ b/templates/base/financials/list.html
@@ -69,7 +69,6 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-sm-6 col-12 mr-b-20">
-        {% if request.user.is_staff %}
         <div class="form-group">
           <a
             href="#"
@@ -78,9 +77,7 @@
             class="btn btn-dark btn-sm"
             >Create entry</a
           >
-          <a href="" class="btn btn-success btn-sm" target="_blank">Export List</a>
         </div>
-        {% endif %}
       </div>
       <div class="col-lg-4">
         <div class="form-group">
@@ -124,10 +121,9 @@
             <table class="table table-responsize mail-list contact-list">
                 <tbody class="table-hover">
                     <tr>
-                        <td class="contact-list-name">Entity</td>
+                      <td class="contact-list-name">Category</td>
                         <td class="contact-list-name">Project</td>
                         <td class="contact-list-name">Profile</td>
-                        <td class="contact-list-name">Category</td>
                         <td class="contact-list-name">Amount</td>
                         <td class="contact-list-name">Contact</td>
                         <td class="contact-list-name">Date</td>
@@ -135,12 +131,12 @@
                     </tr>
                     {% for item in fin %}
                     <tr>
-                        <td class="contact-list-name">
-                            <span
-                            class="contact-list-phone d-block ">
-                            {{item.entity.name}}
-                            </span>
-                        </td>
+                      <td class="contact-list-name">
+                          <span
+                          class="contact-list-phone d-block ">
+                          {{item.category}}
+                          </span>
+                      </td>
                         <td class="contact-list-name">
                             <span
                             class="contact-list-phone d-block ">
@@ -150,13 +146,7 @@
                         <td class="contact-list-name">
                             <span
                             class="contact-list-phone d-block ">
-                            {{item.profile}}
-                            </span>
-                        </td>
-                        <td class="contact-list-name">
-                            <span
-                            class="contact-list-phone d-block ">
-                            {{item.category}}
+                            {% if item.profile %}{{item.profile}}{% else %}-{% endif %}
                             </span>
                         </td>
                         <td class="contact-list-name">
