--- a/templates/base/projects/list.html
+++ b/templates/base/projects/list.html
@@ -1,4 +1,8 @@
-{% extends 'base.html' %} {% load static %} {% block title %}Projects{% endblock %} {% block scripts %}
+{% extends 'base.html' %}
+ {% load static %}
+ {% load crispy_forms_tags %}
+{% block title %}Projects{% endblock %} 
+{% block scripts %}
 <style type="text/css">
   #id_invitees > ul {
     max-height: 150px;
@@ -13,14 +17,14 @@
   <!--Form Modal -->
   <div
     class="modal modal-blue fade bs-modal-lg-blue"
-    id="meetingModal"
+    id="projectsModal"
     tabindex="-1"
     aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Create Meeting</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Create Project</h5>
           <button
             type="button"
             class="close"
@@ -34,36 +38,11 @@
           <form action="" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="form-group">
-              <label for="title">Title</label>
-              {{form.title}}
-            </div>
-            <div class="form-group">
-              <label for="agenda">Agenda</label>
-              {{form.agenda}}
-            </div>
-            <div class="form-group">
-              <label for="estimated_period">Estimated Period</label>
-              {{form.estimated_period}}
-            </div>
-            <div class="form-group">
-              <label for="date">Meeting for:</label>
-              {{form.group}}
-            </div>
-            <div class="form-group">
-              <label for="date">Start Time</label>
-              {{form.start_time}}
-            </div>
-            <div class="form-group">
-              <label for="time">End Time</label>
-              {{form.end_time}}
-            </div>
-            <div class="form-group">
-              <label for="description">Description</label>
-              {{form.description}} {{form.media}}
+              {{form|crispy}}
             </div>
             <div class="text-center mr-b-30">
               <button class="btn btn-rounded btn-success ripple" type="submit">
-                Add Meeting
+                Add Project
               </button>
             </div>
           </form>
@@ -125,17 +104,15 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-sm-6 col-12 mr-b-20">
-        {% if request.user.is_staff %}
         <div class="form-group">
           <a
             href="#"
             data-bs-toggle="modal"
-            data-bs-target="#meetingModal"
+            data-bs-target="#projectsModal"
             class="btn btn-dark btn-sm"
             >Create entry</a
           >
         </div>
-        {% endif %}
       </div>
       <div class="col-lg-4">
         <div class="form-group">
