--- a/templates/base/contacts/members.html
+++ b/templates/base/contacts/members.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% load static %} {% load crispy_forms_tags %} {% block title %}Contact List{% endblock %} {% block content %}
+{% extends 'base.html' %} {% load static %} {% load crispy_forms_tags %} 
+{% block title %}Contact List{% endblock %} {% block content %}
 <div class="container-fluid">
   <!--Form Modal -->
   <div
@@ -47,7 +48,9 @@
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Edit Member Details</h5>
+          <h5 class="modal-title" id="exampleModalLabel">
+            Edit Member Details
+          </h5>
           <button
             type="button"
             class="close"
@@ -72,8 +75,6 @@
     </div>
   </div>
   <!-- End Modal -->
-
-
 
   <div class="row page-title clearfix">
     <div class="page-title-left">
@@ -114,26 +115,38 @@
       <div class="col-md-4 mb-4"></div>
     </div>
   </div>
+  <div class="widget-list row">
+    <div class="col-lg-8 widget-holder">
+      <div class="form-group">
+        {% for cat in categories %}
+          <a
+            href="{% url 'contacts_list_by_category' cat.slug %}"
+            class="btn btn-dark btn-sm"
+            >{{cat.name}}</a
+          > 
+          {% if not forloop.last %} {% endif %}{% endfor %}
+      </div>
+    </div>
+  </div>
+
   <div class="row">
     <div class="col-lg-12 widget-holder widget-full-height widget-flex">
       <div class="widget-bg">
-        <div class="widget-body clearfix"></div>
-        <div class="alert alert-light">
+        <div class="alert alert-light custom-table-scroll-content scrollbar-enabled">
           <table class="table table-responsize mail-list contact-list">
             <tbody class="table-hover">
               <tr>
-                <td class="contact-list-name">ID</td>
+                <td class="contact-list-name">Customer Code</td>
                 <td class="contact-list-name">Full Names</td>
                 <td class="contact-list-name">Phone number</td>
                 <td class="contact-list-name">Email</td>
+                <td class="contact-list-name">Category</td>
                 <td class="contact-list-name"></td>
               </tr>
               {% for user in user_obj %}
               <tr>
                 <td class="contact-list-user d-none d-md-block">
-                  <a href="#" class="d-block fw-semibold"
-                    >{{user.id}}</a
-                  >
+                  <a href="#" class="d-block fw-semibold">{{user.code}}</a>
                 </td>
                 <td class="contact-list-name">
                   <a href="#" class="d-block fw-semibold"
@@ -147,7 +160,12 @@
                   <span class="contact-list-phone d-block">{{user.email}}</span>
                 </td>
                 <td class="contact-list-message">
-                    <a
+                  <span class="contact-list-phone d-block"
+                    >{{user.category.name}}</span
+                  >
+                </td>
+                <td class="contact-list-message">
+                  <a
                     href="#"
                     data-bs-toggle="modal"
                     data-bs-target="#editMemberModal"
