--- a/templates/base/financials/list.html
+++ b/templates/base/financials/list.html
@@ -89,19 +89,16 @@
   <!-- Widget for graph stats -->
   <div class="widget-list row">
     <div class="col-lg-4 widget-holder">
-      <ul class="list-group">
+      <div class="form-group">
         {% for cat in categories %}
-        <li
-          class="list-group-item list-group-item-action d-flex justify-content-end"
-        >
+        
           <a
             href="{% url 'expense_list_by_category' cat.slug %}"
-            class="mr-auto mr-0-rtl ml-auto-rtl"
+            class="btn btn-dark btn-sm"
             >{{cat.name}}</a
           >
-        </li>
         {% if not forloop.last %} {% endif %}{% endfor %}
-      </ul>
+      </div>
     </div>
   </div>
 
@@ -115,9 +112,11 @@
               {% with category.count as total_finances %}
               <h5 class='box-title mr-b-0'>{{ total_finances }} {{category.name}}{{ total_finances|pluralize }}</h5>
               {% endwith %}
+              {% else %}
+              <h5 class='box-title mr-b-0'>Income vs Expenses</h5>
             {% endif %}
         </div>
-        <div class="alert alert-light app-table">
+        <div class="alert alert-light app-table custom-table-scroll-content scrollbar-enabled">
             <table class="table table-responsize mail-list contact-list">
                 <tbody class="table-hover">
                     <tr>
@@ -158,7 +157,7 @@
                         <td class="contact-list-name">
                             <span
                             class="contact-list-phone d-block ">
-                            {{item.contact.id}}
+                            {{item.contact.code}}
                             </span>
                         </td>
                         <td class="contact-list-name">
