--- a/templates/authentication/set_new_password.html
+++ b/templates/authentication/set_new_password.html
@@ -6,8 +6,11 @@
     <div class="col-10 ml-sm-auto col-sm-6 col-md-4 ml-md-auto login-center login-center-mini mx-auto">
         <div class="navbar-header text-center mt-2 mb-4">
             <a href="/">
-                <img src="{% static 'img/Logo_web.png' %}" alt="Logo">
-            </a>
+                <img src="{% static 'img/hggc-logo.png' %}" alt="logo" />
+              </a>
+              <a href="/">
+                <img src="{% static 'img/Seraphim-logo.png' %}" alt="logo" />
+              </a>
         </div>
         <!-- /.navbar-header -->
         <form class="form-material" action="{% url 'password_reset' uidb64 token %}" method="POST">
